# config-assistants-demo

./: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
agents/react_agent/: configuration.py  graph.py  graph_without_config.py
agents/supervisor/: subagents.py  supervisor_no_config.py  supervisor_prebuilt.py
notebooks/: assistant_test.ipynb  prompt_test.ipynb
src/react_agent/: __init__.py  configuration.py  graph.py  graph_without_config.py  graph_without_runnable_config  tools.py
src/supervisor/: __init__.py  subagents.py  supervisor.py  supervisor_configuration.py  supervisor_prebuilt.py
