[project]
name = "langgraph-configuration-patterns-demo"
version = "0.0.1"
description = "Demonstrates configuration patterns in LangGraph from simple to multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-anthropic>=0.3.16",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-sdk>=0.1.72",
    "langgraph-supervisor>=0.0.27",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.0",
    "langchain-google-vertexai",
    "yfinance>=0.2.64",
]
